Fix alignments

--- a/static/less/_scaffolding.less
+++ b/static/less/_scaffolding.less
@@ -125,7 +125,7 @@ body {
           a {
             .sl;
             color: @gray4;
-            padding-left: 36px;
+            padding-left: 40px;
             padding-top: 5px;
             padding-bottom: 5px;
             background-color: @gray8;
